--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 server.port=1314
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-uf68v25r1gw42e06cjo.mysql.rds.aliyuncs.com:3306/course?useSSL=false&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+#?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#?useSSL=false&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=pd_123_pd
+spring.datasource.password=
 
 #mybatis
 mybatis.mapper-locations=classpath:com/zhiliao/mapper/*.xml
 mybatis.type-aliases-package=com/zhiliao/model
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
